redirects to jugdaytrento.it

--- a/jday/index.html
+++ b/jday/index.html
@@ -60,12 +60,12 @@
               <ul id="nav" class="nav">
                      <li class="current"><a class="smoothscroll" href="#home">Home</a></li>
                      <li><a class="smoothscroll" href="#about">About</a></li>
-                     <li><a class="smoothscroll" href="#quicks">Talks</a></li>
                      <!--
+                     <li><a class="smoothscroll" href="#quicks">Talks</a></li>
                      <li><a class="smoothscroll" href="#sprint">Sprint</a></li>
                      <li><a class="smoothscroll" href="#dojo">Dojo</a></li>
-                    -->
                      <li><a class="smoothscroll" href="#location">Location</a></li>
+                    -->
               </ul> <!-- end #nav -->
 
            </nav> <!-- end #nav-wrap -->
@@ -131,502 +131,12 @@
              Una giornata per mettersi alla prova, creare contatti e divertirsi.
            </p>
 
-           <p class="lead">
-             Verifica registrazione all'evento dalle ore 9.00 alle ore 9.30.
-           </p>
-           <!---
-           <p class="lead">
-             I lavori si apriranno con un saluto di Flavio DeFlorian, </br>Consigliere HIT e Prorettore Vicario.
-           </p>
-            -->
+            <a href="http://jugdaytrento.it"><h1>SITO DELL'EVENTO</h1></a>
          </div>
 
       </div> <!-- end section-header -->
+    </section>
 
-      <div class="row section-content">
-
-            <div class="six columns">
-              <h3>Talks</h3>
-
-              <p>Nell'arco della giornata si susseguiranno incontri su vari temi
-                  di carattere professionale che riguardano il mondo di Java&#8482; e della JVM.
-                  Esperti del linguaggio parleranno delle proprie esperienze professionali.
-            <a href="#quicks">talks</a>
-              </p>
-          </div>
-
-          <!--
-          <div class="six columns">
-              <h3>Hands On</h3>
-
-              <p>Il ruolo si rovescia e il pubblico diventa protagonista.
-                  Mani alla propria tastiera per imparare come scrivere codice
-                   pulito ed adottare soluzioni eleganti. Quest’anno proponiamo:
-                   una competizione per coloro che vogliono misurare
-                   la propria abilità sportivamente, ed anche un coding dojo
-                   per coloro che desiderano confrontarsi in maniera collaborativa.
-            <br>
-            <p>
-            Nella versione competitiva
-            <a href="#sprint">sprint</a>
-            </p>
-            <p>
-            Nella versione cooperativa
-            <a href="#dojo">dojo</a>
-        </p>
-              </p>
-
-          </div>
-      -->
-
-
-      </div> <!-- end section-content -->
-
-
-      <div id="call2action">
-
-           <div class="row section-ads">
-
-              <div class="twelve columns">
-            <p>I  posti sono limitati dalla massima capienza della sala.
-              I primi venti registrati saranno avvisati via email.
-              In caso di defezioni si procederà a seguire per ordine di iscrizione.</p>
-
-                 <h2>Vieni ad incontrarci</h2>
-
-                 <!--
-            <div class="action">
-                       <a href="https://www.eventbrite.com/e/jug-day-2017-talks-tickets-32013679778" class="button">Registrazione ai talk</a>
-                   </div>
-            <div class="action">
-                       <a href="https://www.eventbrite.com/e/jug-day-2017-sprint-contest-tickets-32013484193" class="button">Registrazione al contest</a>
-                   </div>
-            <div class="action">
-                       <a href="https://www.eventbrite.com/e/jug-day-2017-dojo-tickets-32385034510" class="button">Registrazione al dojo</a>
-                   </div>
-               -->
-
-               </div>
-
-           </div> <!-- end section-ads -->
-
-       </div> <!-- end call2action -->
-
-   </section> <!-- About Section End-->
-
-   <!-- Quicks Section
-   ================================================== -->
-   <section id="quicks">
-
-      <div class="row section-header">
-
-          <div class="twelve columns">
-
-              <div class="icon-wrap">
-                <i class="fa fa-group"></i>
-             </div>
-
-             <h1>Talks</h1>
-
-             <p class="lead">Presentazioni da 40 minuti tenute da persone che
-                 guidano la comunità Java&#8482 a livello nazionale ed internazionale;
-             </p>
-
-             <p class="lead">Presentazioni brevi da 20 minuti ciascuna su un tema specifico di Java&#8482; o JVM
-           che può riguardare prodotti, una metodologia, e strumenti per lo sviluppo.
-             </p>
-
-         </div>
-
-      </div> <!-- end section-header -->
-
-      <div class="row section-content">
-
-            <div class="six columns">
-              <h3>Simone Bordet</h3>
-
-              <p>Core developer di Jetty.<br>
-              </p>
-          </div>
-
-          <div class="six columns">
-              <h3>Mario Fusco</h3>
-
-              <p>Core developer di Drools.<br>
-              </p>
-
-          </div>
-
-      </div> <!-- end section-content -->
-
-      <!--
-      <div class="row section-content">
-
-            <div class="six columns">
-              <h3>Davide Montesin</h3>
-
-              <p>
-            Java&#8482; multithreading consente allo sviluppatore di parallelizzare
-            e utilizzare più risorse della CPU o per gestire l'interazione
-            dell'utente indipendentemente dalla rete o un database.
-              </p>
-          </div>
-
-          <div class="six columns">
-              <h3>Fabrizio Rizzonelli</h3>
-
-              <p>
-            Cos'è il pattern MVP: quali sono i suoi svantaggi e vantaggi.
-            Breve introduzione a come si struttura e utilizza all'interno di
-            una applicazione Android.
-              </p>
-          </div>
-
-      </div>
-
-
-      <div class="row section-content">
-
-            <div class="six columns">
-              <h3>Chris Mair</h3>
-
-              <p>
-            Il supporto per full text search builtin in Postgres.
-            Ci sono i risultati di ricerche di vario tipo su un corpus MOLTO grande.
-            con esempi di operazioni ETL molto grandi tra JDBC e Postgres.
-              </p>
-          </div>
-
-        <div class="six columns">
-              <h3>Luca Guadagnini</h3>
-
-              <p>
-          La presentazione riguarderà Java&#8482; 8 e l'uso dell'oggetto Optional
-           introdotto nel package java.util. Dalle motivazioni alle
-           novità di optional Java&#8482; 9.
-              </p>
-          </div>
-
-      </div>
-
-
-      <div class="row section-content">
-
-            <div class="six columns">
-              <h3>Andrea Bertagnolli</h3>
-
-              <p>
-            In piena linea con lo stile “fare solo ciò che è necessario”
-            vedremo come è possibile implementare sistemi di integrazione
-            asincroni e disaccoppiati partendo dalle reali necessità e non dai tool.
-              </p>
-          </div>
-
-          <div class="six columns">
-              <h3>Alessandro Dalfovo</h3>
-
-              <p>
-                  Dopo tre anni di sviluppo del nostro applicativo basato su
-                  CQRS e Event Sourcing vediamo che risultati abbiamo ottenuto.
-              </p>
-          </div>
-
-      </div>
-
-      <div class="row section-content">
-
-            <div class="six columns">
-              <h3>Andrea Selva</h3>
-
-              <p>
-            Netty, asynch network framework.
-            Breve introduzione su cosa fa e come risolve il problema 10K connections
-            con descrizione delle strutture del framework.
-              </p>
-          </div>
-
-        <div class="six columns">
-              <h3>...</h3>
-
-              <p>
-            ...
-              </p>
-          </div>
-
-      </div> <!-- end section-talks-content -->
-
-      <div id="call2action">
-
-           <div class="row section-ads">
-
-              <div class="twelve columns">
-            <p>I posti sono limitati dalla capienza della sala. I primi 20 registrati saranno avvisati via email.
-              In caso di defezioni si procederà a seguire per ordine di iscrizione.</p>
-              Presto si apriranno le registrazioni all'evento.
-              <!--
-                    <div class="action">
-                     <a href="https://www.eventbrite.com/e/jug-day-2017-talks-tickets-32013679778" class="button">Registrazione alle presentazioni</a>
-                 </div>
-             -->
-               </div>
-
-           </div> <!-- end section-ads -->
-
-       </div> <!-- end call2action -->
-
-   </section> <!-- About Section End-->
-
-   <!-- Sprint Section
-   ==================================================
-
-   <section id="sprint">
-
-      <div class="row section-header">
-
-          <div class="twelve columns">
-
-              <div class="icon-wrap">
-                <i class="fa fa-group"></i>
-             </div>
-
-             <h1>Sprint Contest</h1>
-
-             <p class="lead">Qualche ora di programmazione mirate al conseguimento di uno specifico obiettivo.
-             Spazio alla scrittura di codice di qualità. Codice pulito, compatto ed elegante.
-           </p>
-
-         </div>
-
-      </div>
-
-      <div class="row section-content">
-
-            <div class="six columns">
-              <h3>Requisiti.</h3>
-
-          <ul>
-            <li>Portatile</li>
-            <li>Java&#8482; Dev Kit</li>
-            <li>IDE</li>
-          </ul>
-          </div>
-
-          <div class="six columns">
-              <h3>Giuria.</h3>
-
-          <ul>
-            <li>Davide Montesin, <br>JUGTAAS</li>
-            <li>Giovanni Frigo, <br>Belka</li>
-            <li>Nicola Grigoletti, <br>ThreadSolutions </li>
-          </ul>
-          </div>
-
-      </div>
-
-      <div class="row section-content">
-
-            <div class="six columns">
-              <h3>Aziende.</h3>
-
-              <p>Aziende che ricercano personale:
-              </p>
-          <ul>
-            <li>Paros, <br><a href="http://www.paros.srl/">http://www.paros.srl/</a></li>
-            <li>ThreadSolutions, <br><a href="http://thread.solutions/">http://thread.solutions/</a></li>
-            <li>Belka,  <br><a href="http://www.belka.us/">http://www.belka.us/</a></li>
-          </ul>
-          </div>
-
-
-          <div class="six columns">
-              <h3>Vincite.</h3>
-
-              <p>Per tutti i partecipanti una maglietta dell'evento.<br>
-            Per i primi tre classificati un'attestato di miglior <br><b>JUG Day Coder 2017</b> e libri premio.
-              </p>
-          </div>
-
-      </div>
-
-      <div id="call2action">
-
-           <div class="row section-ads">
-
-              <div class="twelve columns">
-            <p>I posti sono limitati dall capienza della sala.
-              I primi 10 registrati saranno avvisati via email.
-              In caso di defezioni si procederà a seguire per ordine di iscrizione.
-            </p>
-
-
-                    <div class="action">
-                     <a href="https://www.eventbrite.com/e/jug-day-2017-sprint-contest-tickets-32013484193" class="button">Registrazione al contest</a>
-                 </div>
-
-               </div>
-
-           </div>
-
-       </div>
-
-   </section> <!-- About Section End-->
-
-
-   <!-- Dojo Section
-   ==================================================
-   <section id="dojo">
-
-      <div class="row section-header">
-
-          <div class="twelve columns">
-
-              <div class="icon-wrap">
-                <i class="fa fa-group"></i>
-             </div>
-
-             <h1>Dojo</h1>
-
-             <p class="lead">
-                Introduzione ed esercizi pratici in Test Driven Development a coppie.
-
-                Più in dettaglio, il TDD prevede la ripetizione di un breve
-                ciclo di sviluppo in tre fasi, detto "ciclo TDD".
-                Nella prima fase (detta "fase rossa"), il programmatore
-                scrive un test automatico per la nuova funzione da sviluppare,
-                che deve fallire in quanto la funzione non è stata ancora realizzata.
-                 Nella seconda fase (detta "fase verde"), il programmatore
-                 sviluppa la quantità minima di codice necessaria per passare il test.
-                  Nella terza fase (detta "fase grigia" o di refactoring),
-                  il programmatore esegue il refactoring del codice per adeguarlo a determinati standard di qualità.
-             </p>
-
-         </div>
-
-      </div>
-
-      <div class="row section-content">
-
-            <div class="six columns">
-              <h3>Mario Alexandro Santini</h3>
-          </div>
-
-          <div class="six columns">
-              <h3>Erinda Jaupi</h3>
-            <h3>Valentina Servile</h3>
-        </div>
-
-      </div>
-
-
-
-      <div id="call2action">
-
-           <div class="row section-ads">
-
-              <div class="twelve columns">
-            <p>I posti sono limitati dalla capienza della sala. I primi 8 registrati saranno avvisati via email.
-              In caso di defezioni si procederà a seguire per ordine di iscrizione.</p>
-                    <div class="action">
-                     <a href="https://www.eventbrite.com/e/jug-day-2017-dojo-tickets-32385034510" class="button">Registrazione al dojo</a>
-                 </div>
-
-               </div>
-
-           </div>
-
-       </div>
-
-   </section> <!-- About Section End-->
-
-
-   <!-- Location Section
-   ================================================== -->
-    <section id="location">
-
-        <div class="contacts">
-
-            <div class="row contact-details">
-
-                <div class="columns">
-                    <h3><i class="fa fa-home"></i>Indirizzo.</h3>
-            <a href="http://clabitalia.it/index.php/project/clab-trento/"><img width="100" src="images/sponsors/clab.jpg"/></a>
-                    <p><a href="http://clabitalia.it/index.php/project/clab-trento/"></a><br>
-                          Contamination Lab<br>
-                          Istituto Pavoniano Artigianelli<br>
-                          Piazza Fiera, 4<br>
-                         38122, Trento , Italy
-                     </p>
-                </div>
-
-                <div class="columns">
-                    <h3><i class="fa fa-home"></i>Patrocinio.</h3>
-            <a href="http://www.trentinoinnovation.eu/"><img width="100" src="images/sponsors/hit.jpg"/></a>
-                <p><a href="http://www.trentinoinnovation.eu/">trentinoinnovation.eu</a><br>
-                     </p>
-                </div>
-                <!--
-               <div class="columns">
-                   <h3>Locandina</h3>
-                   <a href="Locandina.pdf"><img src="images/locandina.gif" /></a>
-               </div>
-           -->
-               <div class="columns end">
-                   <h3><i class="fa fa-envelope"></i>Email.</h3>
-                   <p>jugtaas@googlegroups.com<br>
-                   </p>
-               </div>
-
-             </div> <!-- end contact-details -->
-
-        </div> <!-- end contacts -->
-
-       <div id="map">
-
-            <p class="map-error">Something went wrong... Unable to load map... Please try to enable javascript</p>
-
-       </div> <!-- end map -->
-
-    </section> <!-- end location section -->
-
-   <!-- footer
-   ================================================== -->
-   <footer>
-
-      <div class="row">
-
-         <div class="twelve columns">
-            <h1>Sponsors</h1>
-            <div class="columns"><a href="http://www.belka.us/"><img src="images/sponsors/logo_belka.png"></a></div>
-            <div class="columns"><a href="http://www.paros.srl/"><img src="images/sponsors/logo_paros.png"></a></div>
-            <div class="columns"><a href="http://thread.solutions/"><img src="images/sponsors/logo_threadsolutions.png"></a></div>
-<!--
-            <div class="columns"><a href="http://www.xpeppers.com/"><img src="images/sponsors/logo_xpeppers.png"></a></div>
--->
-            <hr>
-            <ul class="copyright">
-              <li>Organizzato da <a title="JUGTAAS" href="http://www.jugtaas.org/">Java&#8482; User Group Trentino Alto Adige S&#xFC;dtirol</a></li>
-              <li>Progetto grafico iniziale di <a title="Styleshout" href="http://www.styleshout.com/">Styleshout</a></li>
-              <br>Java è un marchio registrato di Oracle Corporation.
-            </ul>
-
-         </div>
-         <div class="twelve columns">
-            <h1>Comitato</h1>
-            <ul class="copyright">
-                <li>Carlo Rizzi</li>
-                <li>Mario Santini</li>
-                <li>Nicola Grigoletti</li>
-                <li>Pietro De Grandi</li><br>
-                <li>Coordinamento Trentino Nicola Pedot</li>
-                <li>Coordinamento AltoAdige Davide Montesin
-            </ul>
-        </div>
-
-      </div>
-
-      <div id="go-top"><a class="smoothscroll" title="Back to Top" href="#intro"><i class="icon-up-open"></i></a></div>
-
-   </footer> <!-- Footer End-->
 
    <!-- Java Script
    ================================================== -->
