--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
    <!--- Basic Page Needs
    ================================================== -->
    <meta charset="utf-8">
-    <title>JUTAAS</title>
+    <title>JUGTAAS</title>
     <meta name="description" content="Java Virtual Machine User Group - Trentino Alto Adige Südtirol">
     <meta name="author" content="Nicola Pedot">
 
