adds social links

--- a/index.html
+++ b/index.html
@@ -303,31 +303,16 @@
              <p class="lead">
                 Il gruppo non ha una iscrizione formale, per rimanere in contatto,
                 ascoltare le discussioni, dire la vostra e rimanere aggiornati
-                sull'attività del gruppo, esiste una <a href="https://groups.google.com/forum/?fromgroups#%21forum/jugtaa">mailinglist Google</a>.
+                sull'attività del gruppo, esiste<br />
+                <a href="https://groups.google.com/forum/?fromgroups#%21forum/jugtaa">una mailinglist Google <img width="20%" src="images/button-google.png" /></a><br/>
+                <a href="https://t.me/joinchat/IPDGqBC3KEAVONlI8-NYpQ">un gruppo Telegram <img width="20%"  src="images/button-telegram.png" /></a><br/>
+                <a href="https://www.facebook.com/groups/388489421557182">un gruppo Facebook <img width="20%"  src="images/button-facebook.png" /></a>
              </p>
 
          </div>
 
       </div> <!-- end section-header -->
 
-
-
-      <div id="call2action">
-
-           <div class="row section-ads">
-
-              <div class="twelve columns">
-            <p>La lista è moderata ed a bassissimo rumore.</p>
-                    <div class="action">
-                     <a href="https://groups.google.com/forum/?fromgroups#%21forum/jugtaa" class="button">Registrazione alla malinglist</a>
-                 </div>
-
-               </div>
-
-           </div> <!-- end section-ads -->
-
-
-       </div> <!-- end call2action -->
 
    </section> <!-- About Section End-->
 
