fixed some accent letter and space between words

--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
               </p>
 
               <h3>Costa qualche cosa unirsi al gruppo?</h3>
-              <p> No. JUGTAAS NON è un ente fiscalmente riconosciuto, non ha cassa, ne bilancio. Non c'e' scopo di lucro, il tutto è su base volontaria. Il JUG Trento chiedeva senza obbligo solo 1 euro alla fine degli incontri, interamente devoluto al relatore per pagargli una pizza come simpatico ringraziamento meno simbolico per la fatica di preparare l'incontro.
+              <p> No. JUGTAAS NON è un ente fiscalmente riconosciuto, non ha cassa, ne bilancio. Non c'è scopo di lucro, il tutto è su base volontaria. Il JUG Trento chiedeva senza obbligo solo 1 euro alla fine degli incontri, interamente devoluto al relatore per pagargli una pizza come simpatico ringraziamento meno simbolico per la fatica di preparare l'incontro.
               </p>
 
               <h3>Solo prescelti sono ammessi alla presentazione di materiale agli incontri?</h3>
@@ -126,8 +126,8 @@
 
           <div class="six columns">
 
-              <h3>Si, ma che cos'e' il jugtaas?</h3>
-              <p> Un gruppo di utenti (che avario titolo hanno/o avranno a che fare con) java e che si ritrova più o meno periodicamente.
+              <h3>Si, ma che cos'è il jugtaas?</h3>
+              <p> Un gruppo di utenti (che a vario titolo hanno/o avranno a che fare con) java e che si ritrova più o meno periodicamente.
               </p>
 
               <h3>Esiste un capo?</h3>
@@ -253,7 +253,7 @@
              <h1>Incontri</h1>
 
              <p class="lead">Gli incontri del gruppo si svolgono in diversi luoghi della regione
-               per sapere qual'e' il prossimo tema, quando, dove si terrà e per iscriverti<br>
+               per sapere qual'è il prossimo tema, quando, dove si terrà e per iscriverti<br>
                seguici nella mailinglist del gruppo</a>.
            </p>
 
