adds voxeddays info

--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
 
              <h1>Eventi</h1>
 
-             <p class="lead">In questa sessione in evidenza eventi di carattere locale, nazionale, internazionale.
+             <p class="lead">In questa sessione in evidenza eventi di carattere nazionale, internazionale.
              </p>
 
          </div>
@@ -195,13 +195,22 @@
       <div class="row section-content">
 
             <div class="six columns">
+
+
+
               <h3>JUGTAAS Day</h3>
 
               <p>
-            Ritrovo a carattere annuale,
-
+            Ritrovo annuale a carattere regionale , dei membri JUGTAAS a porte aperte:
               <a href="http://jugdaytrento.it/">vai al sito</a>
               </p>
+
+                <h3>VOXXEDDAYS Milano</h3>
+              <p>
+            Ritrovo a carattere nazionale, internazionale dei cugini JUG Milano:
+              <a href="https://voxxeddays.com/milan/">https://voxxeddays.com/milan/</a>
+              </p>
+    
           </div>
 
           <div class="six columns">
@@ -250,12 +259,17 @@
                 <i class="fa fa-group"></i>
              </div>
 
-             <h1>Incontri</h1>
+             <h1>Incontri Locali</h1>
 
              <p class="lead">Gli incontri del gruppo si svolgono in diversi luoghi della regione
-               per sapere qual'è il prossimo tema, quando, dove si terrà e per iscriverti<br>
-               seguici nella mailinglist del gruppo</a>.
+               per sapere qual'è il prossimo o per proporti come relatore<br>
+                partecipa nella mailinglist del gruppo</a>.
            </p>
+              <h3>Java Developers' Meeting</h3>
+                <p>
+                 <a href="http://jugtaas.eventbrite.com/">http://jugtaas.eventbrite.com/</a>
+                </p>
+
 
          </div>
 
