small jugday 19 page fixes

--- a/jugday19/index.html
+++ b/jugday19/index.html
@@ -65,7 +65,8 @@
         <ul id="nav" class="nav">
           <li class="current"><a class="smoothscroll" href="#home">Home</a></li>
           <li><a class="smoothscroll" href="#about">About</a></li>
-          <li><a class="smoothscroll" href="#talks">Talks</a></li>
+          <li><a class="smoothscroll" href="#quicks">Talks</a></li>
+          <li><a class="smoothscroll" href="#network">Networking</a></li>
           <li><a class="smoothscroll" href="#location">Location</a></li>
         </ul> <!-- end #nav -->
 
@@ -202,7 +203,7 @@
 
       <div class="row section-ads">
 
-        Vieni ad ascoltare le novità
+        <h2 style="color:#ffffff">Vieni ad ascoltare le novità</h2>
         <div class="twelve columns">
           <div class="action">
             <a href="https://www.eventbrite.com/e/jug-taas-day-19-tickets-60542667749" class="button">Registrazione alla giornata</a>
@@ -234,26 +235,23 @@
   
       </div>
 
-    </div> <!-- end section-content -->
+      <hr>
+        <div class="call-to-action">
 
+          <div class="row section-ads">
 
-    <div >
+            <div class="twelve columns">
+              <h2 style="color:#710590">Vieni a collegarti</h2>
 
-      <div class="row section-ads">
+              <div class="action">
+                <a href="https://www.eventbrite.com/e/jug-taas-day-19-tickets-60542667749" class="button">Registrazione alla giornata</a>
+              </div>
 
-        <div class="twelve columns">
-          <h2>Vieni a collegarti</h2>
+            </div>
 
-          <div class="action">
-            <a href="https://www.eventbrite.com/e/jug-taas-day-19-tickets-60542667749" class="button">Registrazione alla giornata</a>
-          </div>
-
-        </div>
-
-      </div> <!-- end section-ads -->
-
-    </div> <!-- end call-to-action -->
-
+          </div> <!-- end section-ads -->
+        </div> <!-- end call-to-action -->
+        </div> <!-- end section -->
   </section> <!-- About Section End-->
 
   <!-- Location Section
