changed the main intro senteces

--- a/jugday19/index.html
+++ b/jugday19/index.html
@@ -79,10 +79,9 @@
       <div class="twelve columns">
         <h1>18 maggio 2019</h1>
 
-        <h1>Un giorno per incontrare la comunità per la Java&#8482; Virtual Machine!</h1>
+        <h1>Incontra la comunità di appassionati ed esperti del mondo Java&#8482; Virtual Machine!</h1>
 
-        <p>Vola al Java&#8482; User Group Day del Trentino Alto Adige S&#xFC;dtirol ed incontra le persone che usano
-          Java&#8482; Kotlin&#8482; Scala&#8482; in contesti professionali.</p>
+        <p>Vola al Java&#8482; User Group Day del Trentino Alto Adige S&#xFC;dtirol ed incontra persone che si divertono, lavorano con Java&#8482;, Kotlin&#8482; e Scala&#8482;</p>
 
         <h5>Tempo alla scadenza</h5>
 
