fixed wrong accent

--- a/jugday19/index.html
+++ b/jugday19/index.html
@@ -178,7 +178,7 @@
         <img class="speaker" src="images/speaker/mario_fusco.jpg"> 
       </a>       
         <p>Java Champion Red Hat Developer.<br>
-          Come e perchè ho convertito i miei vecchi progetti Java&#8482; in componenti serverless di prima classe.</p>
+          Come e perch&eacute; ho convertito i miei vecchi progetti Java&#8482; in componenti serverless di prima classe.</p>
       </div>
 
 
