adds belka and cherrychain as sponsors

--- a/jugday19/index.html
+++ b/jugday19/index.html
@@ -324,29 +324,26 @@
 
   <div class="row section-content">
 
+
     <div class="six columns">
       <h3 style="color:#fff;">Sponsor</h3>
       <a href="https://www.axiastudio.com/">
-      <img class="sponsor" src="images/sponsors/sponsor-axia.png">
+      <img class="sponsor" src="images/sponsors/sponsor-axia2.png">
       </a>
-      <!--
-      <img class="sponsor" src="images/sponsors/sponsor_belka.png">
-      -->
+      <a href="https://belka.us/">
+        <img class="sponsor" src="images/sponsors/sponsor-belka2.png">
+      </a>
     </div> 
 
 
     <div class="six columns">
       <h3 style="color:#fff;">&nbsp;</h3>
-      <a href="https://www.informatelier.it">
-      <img class="sponsor" src="images/sponsors/sponsor_InformAtelier2.png">
-    </a>
-      <!--
-      <h3 style="color:#fff;">&nbsp;</h3>
-      <h3 style="color:#fff;">&nbsp;</h3>
-      <img class="sponsor" src="images/sponsors/sponsor-cherry-chain.png">
-      <h3 style="color:#fff;">&nbsp;</h3>
-      <h3 style="color:#fff;">&nbsp;</h3>
-      -->
+      <a href="https://www.informatelier.it/">
+        <img class="sponsor" src="images/sponsors/sponsor-informatelier2.png">
+      </a>
+      <a href="https://www.cherrychain.it/">
+        <img class="sponsor" src="images/sponsors/sponsor-cherrychain2.png">
+      </a>
     </div> 
 
     <hr>
