adds silvia e francesco speakers

--- a/jugday19/index.html
+++ b/jugday19/index.html
@@ -185,13 +185,36 @@
 
     <div class="row section-content">
 
+      <div class="six columns">
+        <h3>Silvia Fracalossi</h3>
+        <a href="https://www.linkedin.com/in/silviafracalossi/">
+        <img class="speaker" src="images/speaker/silvia_fracalossi.jpg">
+      </a>
+        <p> Software Dev, Data Management @ Datatellers.<br>
+          Java al servizio della Data Science.
+        </p>
+      </div>
+
+      <div class="six columns">
+        <h3>Francesco Vettoretti</h3>
+        <a href="https://www.linkedin.com/in/vettoretti/">
+        <img class="speaker" src="images/speaker/francesco_vettoretti.jpg"> 
+      </a>       
+        <p>DevOps @ Datatellers.<br>
+          Java al servizio della Data Science.</p>
+      </div>
+
+
+    </div> <!-- end section-content -->
+
+    <div class="row section-content">
+
 
       <div class="six columns">
         <h3>Nicola Pedot</h3>
         <a href="https://www.linkedin.com/in/nicolapedot/">
         <img class="speaker" src="images/speaker/nicola_pedot.png">
       </a>
-
         <p>Java Developer Trainer Freelance. <br> Kotlin Data Science
         </p>
       </div>
