--- a/jugday19/index.html
+++ b/jugday19/index.html
@@ -249,7 +249,7 @@
 
         <h1>Networking</h1>
 
-        <p class="lead">Il principale valore dui questa giornata è cogliere l'occasione di confronto e incontro con diverse esperienze 
+        <p class="lead">Il principale valore di questa giornata sta nel l'occasione di confronto e incontro con diverse esperienze 
           dell'ecosistema che ruota attorno alla Java Virtual Machine.
         </p>
         <p class="lead">Sarà garantito ampio spazio al dialogo alle domande.
